# Mensaje-Automatico

./: .env.example  .gitignore  Mensaje Automatico.py  README.md  pyproject.toml  requirements.txt
utils/: __init__.py  env_loader.py  formateo.py  manejo_archivo.py  wsp_message.py
